--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-/* https://newtodesing.com/ 
+/* https://newtodesign.com/
    v2.0 | 20110126
    License: none (public domain)
 */
@@ -21,8 +21,8 @@ b, u, i, center,
 dl, dt, dd, ol, ul, li,
 fieldset, form, label, legend,
 table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
 menu, nav, output, ruby, section, summary,
 time, mark, audio, video {
 	margin: 0;
@@ -33,7 +33,7 @@ time, mark, audio, video {
 	vertical-align: baseline;
 }
 /* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure, 
+article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
 	display: block;
 }
@@ -94,7 +94,7 @@ div , footer {
 }
 
 .hero {
-	margin: 50px auto; 
+	margin: 50px auto;
 	position: relative;
 }
 
@@ -158,7 +158,7 @@ h1.name {
 }
 
 .list-card .exp {
-	margin-right: 15px;
+	margin-right: 10px;
 	color: #4A90E2;
 	font-weight: 600;
 	width: 100px;
@@ -337,8 +337,8 @@ li .description {
 }
 .description::before {
   content: '';
-  width: 0; 
-  height: 0; 
+  width: 0;
+  height: 0;
   border-left: 5px solid transparent;
   border-right: 5px solid transparent;
   border-bottom: 5px solid #f4f4f4;
